--- a/src/components/cryptChart/cryptAlgoSelect/index.less
+++ b/src/components/cryptChart/cryptAlgoSelect/index.less
@@ -1,7 +1,15 @@
 .select{
-    border:1px solid red;
+    // border:1px solid red;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    .playBtn {
+        margin-left: 10px;
+    }
 }
 
-.selectInput {
-    border:1px solid red;
+.select-input {
+    margin-right: 10px;
 }
